test/types/records/ferguson/default-compare-mixed-insn.1-preview.good
default-compare-mixed-insn.chpl:8: In function 'main':
default-compare-mixed-insn.chpl:13: error: Cannot compare records of type R(int(32)) and R(int(64)) using '=='
